unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-parameter4.js
class x { static async f(await) {} }
